# kodegend-client-ipc

./: Cargo.toml  README.md
src/: connection.rs  error.rs  lib.rs  protocol.rs  windows_pipe.rs
