[package]
name = "kodegend_client_ipc"
version = "0.10.1"
edition = "2024"
description = "Cross-platform IPC client for kodegend daemon"
authors = ["KODEGEN.ᴀɪ"]
homepage = "https://kodegen.ai"
repository = "https://github.com/cyrup-ai/kodegend"
license = "Apache-2.0 OR MIT"

[dependencies]
kodegend_protocol_ipc = { version = "0.10" }
serde = "1"
serde_json = "1"
thiserror = "2"
dirs = "6"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
] }
